Continuing to work on prototype

--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -17,7 +17,7 @@ Dynamic           = false
 Type              = box
 Solid             = true
 SelfFlags         = wall
-CheckMask         = pilot # ship # Laser # Orb
+CheckMask         = pilotP1 # pilotP2 # ship # laserP1 # laserP2 # orbP1 # orbP2
 
 [O-WallFloor@O-Wall]
 Position          = (0, 532.5, 0)
