--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -32,6 +32,7 @@ Gravity         = (0.0, 20000.0, 0.0)
 SetList           = MainInput
  
 [MainInput]
+; Keyboard Inputs
 KEY_ESCAPE        = Quit
 KEY_W             = Up
 KEY_A             = Left
@@ -43,6 +44,19 @@ KEY_RIGHT         = Neutral
 KEY_UP            = Upward
 KEY_DOWN          = Downward
 KEY_LEFT          = Super
+; Gamepad Inputs
+JOY_UP_1          = Up
+JOY_LEFT_1        = Left
+JOY_DOWN_1        = Down
+JOY_RIGHT_1       = Right
+JOY_LX_1          = LeftRight
+JOY_LY_1          = UpDown
+JOY_LBUMPER_1     = Dash
+JOY_RBUMPER_1     = Parry
+JOY_X_1           = Neutral
+JOY_Y_1           = Upward
+JOY_A_1           = Downward
+JOY_B_1           = Super
  
 [MainViewport]
 Camera            = MainCamera
@@ -62,5 +76,5 @@ UseParentSpace    = position
 
 ; UI Base
 
-[UIElement@ScrollObject]
+[O-UI@ScrollObject]
 ParentCamera      = MainCamera ; Set MainCamera to be the parent of the UI element, thus binding them, and handling the latter in terms of camera space.
