--- a/data/config/Partition.ini
+++ b/data/config/Partition.ini
@@ -16,4 +16,4 @@ Dynamic           = false
 Type              = box
 Solid             = false
 SelfFlags         = partition
-CheckMask         = pilot
+CheckMask         = pilotP1 # pilotP2
