--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -1,13 +1,10 @@
 [O-Pilot]
 Graphic           = G-Pilot
-Position          = (-512, 0, 0)
-Body              = B-Pilot
-Scale             = (1, 1, 1)
-ChildList         = O-Ship
+HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 
 ;O-Pilot Class Data
 WalkingSpeed         = 20000.0
-FlyingSpeed          = 25000.0
+FlyingSpeed          = 30000.0
 DashSpeed            = 200000.0
 DashDuration         = 0.1
 ParryDuration        = 0.05
@@ -22,7 +19,6 @@ Texture           = Soldier.png
 Pivot             = center
 
 [B-Pilot]
-PartList          = BP-Pilot # BP-Ship
 Dynamic           = true
 FixedRotation     = true
 CustomGravity     = (0.0, 0.0, 0.0)
@@ -30,10 +26,37 @@ CustomGravity     = (0.0, 0.0, 0.0)
 [BP-Pilot]
 Type              = box
 Solid             = true
-SelfFlags         = pilot
-CheckMask         = wall # partition # Laser # Orb
 
-[O-DashMeter@UIElement]
+[O-PilotP1@O-Pilot]
+Body              = B-PilotP1
+Position          = (-512, 0, 0)
+ChildList         = O-ShipP1
+
+[G-PilotP1@G-Pilot]
+
+[B-PilotP1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship
+
+[BP-PilotP1@BP-Pilot]
+SelfFlags         = pilotP1
+CheckMask         = wall # partition # laserP2 # orbP2
+
+[O-PilotP2@O-Pilot]
+Body              = B-PilotP2
+Position          = (512, 0, 0)
+Flip              = x
+ChildList         = O-ShipP2
+
+[G-PilotP2@G-Pilot]
+
+[B-PilotP2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship
+
+[BP-PilotP2@BP-Pilot]
+SelfFlags         = pilotP2
+CheckMask         = wall # partition # laserP1 # orbP1
+
+[O-DashMeter@O-UI]
 Graphic           = G-DashMeter
 Scale             = (0.072, 0.0375, 1.0)
 Position          = (-0.05, -0.475, 0.0)
@@ -42,7 +65,7 @@ Position          = (-0.05, -0.475, 0.0)
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 Pivot             = right
 
-[O-ParryMeter@UIElement]
+[O-ParryMeter@O-UI]
 Graphic           = G-ParryMeter
 Scale             = (0.072, 0.0375, 1.0)
 Position          = (-0.1445, -0.475, 0.0)
@@ -51,7 +74,7 @@ Position          = (-0.1445, -0.475, 0.0)
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 Pivot             = right
 
-[O-LivesMeter@UIElement]
+[O-LivesMeter@O-UI]
 Graphic           = G-LivesMeter
 Scale             = (0.072, 0.025, 1.0)
 Position          = (-0.05, -0.39375, 0.0)
