--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -2,8 +2,6 @@
 Graphic           = G-Ship
 Position          = (0, 0, 0)
 Rotation          = 90.0
-Scale             = (1, 1, 1)
-ChildList         = O-NeutralGun # O-UpwardGun # O-DownwardGun # O-SuperGun
 
 ;O-Ship Class Data
 ClipSizeNeutral   = 10
@@ -38,29 +36,62 @@ BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly acc
 SelfFlags         = ship
 CheckMask         = wall
 
+[O-ShipP1@O-Ship]
+ChildList         = O-NeutralGunP1 # O-UpwardGunP1 # O-DownwardGunP1 # O-SuperGunP1
+
+[O-ShipP2@O-Ship]
+Flip              = y
+ChildList         = O-NeutralGunP2 # O-UpwardGunP2 # O-DownwardGunP2 # O-SuperGunP2
+
 [O-NeutralGun@O-Spawner]
-Spawner           = S-Laser
 Position          = (0.0, -0.5, 0.0)
 
 [O-UpwardGun@O-Spawner]
-Spawner           = S-Orb
 Position          = (-0.5, 0.0, 0.0)
 
 [O-DownwardGun@O-Spawner]
-Spawner           = S-Laser
 Position          = (0.5, 0.0, 0.0)
 
 [O-SuperGun@O-Spawner]
-Spawner           = S-Laser
 Position          = (0.0, 0.0, 0.0)
 
-[S-Laser]
-Object            = O-Laser
+[O-NeutralGunP1@O-NeutralGun]
+Spawner           = SP-LaserP1
 
-[S-Orb]
-Object            = O-Orb
+[O-UpwardGunP1@O-UpwardGun]
+Spawner           = SP-OrbP1
 
-[O-NeutralMeter@UIElement]
+[O-DownwardGunP1@O-DownwardGun]
+Spawner           = SP-LaserP1
+
+[O-SuperGunP1@O-SuperGun]
+Spawner           = SP-LaserP1
+
+[O-NeutralGunP2@O-NeutralGun]
+Spawner           = SP-LaserP2
+
+[O-UpwardGunP2@O-UpwardGun]
+Spawner           = SP-OrbP2
+
+[O-DownwardGunP2@O-DownwardGun]
+Spawner           = SP-LaserP2
+
+[O-SuperGunP2@O-SuperGun]
+Spawner           = SP-LaserP2
+
+[SP-LaserP1]
+Object            = O-LaserP1
+
+[SP-LaserP2]
+Object            = O-LaserP2
+
+[SP-OrbP1]
+Object            = O-OrbP1
+
+[SP-OrbP2]
+Object            = O-OrbP2
+
+[O-NeutralMeter@O-UI]
 Graphic           = G-NeutralMeter
 Scale             = (0.072, 0.0375, 1.0)
 Position          = (-0.239, -0.475, 0.0)
@@ -69,7 +100,7 @@ Position          = (-0.239, -0.475, 0.0)
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 Pivot             = right
 
-[O-UpwardMeter@UIElement]
+[O-UpwardMeter@O-UI]
 Graphic           = G-UpwardMeter
 Scale             = (0.072, 0.0375, 1.0)
 Position          = (-0.3335, -0.475, 0.0)
@@ -78,7 +109,7 @@ Position          = (-0.3335, -0.475, 0.0)
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 Pivot             = right
 
-[O-DownwardMeter@UIElement]
+[O-DownwardMeter@O-UI]
 Graphic           = G-DownwardMeter
 Scale             = (0.072, 0.0375, 1.0)
 Position          = (-0.428, -0.475, 0.0)
@@ -87,7 +118,7 @@ Position          = (-0.428, -0.475, 0.0)
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 Pivot             = right
 
-[O-SuperMeter@UIElement]
+[O-SuperMeter@O-UI]
 Graphic           = G-SuperMeter
 Scale             = (0.45, 0.0375, 1.0)
 Position          = (-0.05, -0.43125, 0.0)
