--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -1,5 +1,6 @@
 [O-Projectile]
 LifeTime          = 5.0
+HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 UseParentSpace    = position
 
 [B-Projectile]
@@ -11,41 +12,84 @@ CustomGravity     = (0.0, 0.0, 0.0)
 Solid             = true
 
 [O-Laser@O-Projectile]
-Graphic           = G-Laser
-Body              = B-Laser
-
 ; O-Laser Class Data
 SpeedLaser        = 1000
 
 [G-Laser]
-Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
 Pivot             = center
 
 [B-Laser@B-Projectile]
-PartList          = BP-Laser
 
 [BP-Laser@BP-Projectile]
 Type              = box
-SelfFlags         = laser
-CheckMask         = wall
+
+[O-LaserP1@O-Laser]
+Graphic           = G-LaserP1
+Body              = B-LaserP1
+
+[G-LaserP1@G-Laser]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserBlue03.png
+
+[B-LaserP1@B-Laser]
+PartList          = BP-LaserP1
+
+[BP-LaserP1@BP-Laser]
+SelfFlags         = laserP1
+CheckMask         = wall # pilotP2
+
+[O-LaserP2@O-Laser]
+Graphic           = G-LaserP2
+Body              = B-LaserP2
+
+[G-LaserP2@G-Laser]
+Texture           = SpaceShooterRedux/PNG/Lasers/laserRed03.png
+
+[B-LaserP2@B-Laser]
+PartList          = BP-LaserP2
+
+[BP-LaserP2@BP-Laser]
+SelfFlags         = laserP2
+CheckMask         = wall # pilotP1
 
 [O-Orb@O-Projectile]
-Graphic           = G-Orb
-Body              = B-Orb
 Scale             = (0.5, 0.5, 0.5)
 
 ; O-Orb Class Data
 SpeedOrb          = 600
 
 [G-Orb]
-Texture           = SpaceShooterRedux/PNG/ufoRed.png
 Pivot             = center
 
 [B-Orb@B-Projectile]
-PartList          = BP-Orb
 
 [BP-Orb@BP-Projectile]
 Type              = sphere
 Restitution       = 1.0 ; A restitution of one to allow for "perfect" bouncing.
-SelfFlags         = orb
-CheckMask         = pilot # wall
+
+[O-OrbP1@O-Orb]
+Graphic           = G-OrbP1
+Body              = B-OrbP1
+
+[G-OrbP1@G-Orb]
+Texture           = SpaceShooterRedux/PNG/ufoBlue.png
+
+[B-OrbP1@B-Orb]
+PartList          = BP-OrbP1
+
+[BP-OrbP1@BP-Orb]
+SelfFlags         = orbP1
+CheckMask         = wall # pilotP2
+
+[O-OrbP2@O-Orb]
+Graphic           = G-OrbP2
+Body              = B-OrbP2
+
+[G-OrbP2@G-Orb]
+Texture           = SpaceShooterRedux/PNG/ufoRed.png
+
+[B-OrbP2@B-Orb]
+PartList          = BP-OrbP2
+
+[BP-OrbP2@BP-Orb]
+SelfFlags         = orbP2
+CheckMask         = wall # pilotP1
