Still working on prototype. Will try to implement wall jumping, melee attacks and parrying tomorrow

--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -25,7 +25,7 @@ FullScreen        = true
 
 [Physics]
 AllowSleep      = false
-Gravity         = (0.0, 20000.0, 0.0)
+Gravity         = (0.0, 25000.0, 0.0)
 ;ShowDebug       = true
  
 [Input]
@@ -34,29 +34,41 @@ SetList           = MainInput
 [MainInput]
 ; Keyboard Inputs
 KEY_ESCAPE        = Quit
-KEY_W             = Up
-KEY_A             = Left
-KEY_S             = Down
-KEY_D             = Right
-KEY_SPACE         = Dash
-KEY_LSHIFT        = Parry
-KEY_RIGHT         = Neutral
-KEY_UP            = Upward
-KEY_DOWN          = Downward
-KEY_LEFT          = Super
+KEY_W             = UpP1
+KEY_A             = LeftP1
+KEY_S             = DownP1
+KEY_D             = RightP1
+KEY_SPACE         = DashP1
+KEY_LSHIFT        = ParryP1
+KEY_RIGHT         = NeutralP1
+KEY_UP            = UpwardP1
+KEY_DOWN          = DownwardP1
+KEY_LEFT          = SuperP1
 ; Gamepad Inputs
-JOY_UP_1          = Up
-JOY_LEFT_1        = Left
-JOY_DOWN_1        = Down
-JOY_RIGHT_1       = Right
-JOY_LX_1          = LeftRight
-JOY_LY_1          = UpDown
-JOY_LBUMPER_1     = Dash
-JOY_RBUMPER_1     = Parry
-JOY_X_1           = Neutral
-JOY_Y_1           = Upward
-JOY_A_1           = Downward
-JOY_B_1           = Super
+JOY_UP_1          = UpP1
+JOY_LEFT_1        = LeftP1
+JOY_DOWN_1        = DownP1
+JOY_RIGHT_1       = RightP1
+JOY_LX_1          = LeftRightP1
+JOY_LY_1          = UpDownP1
+JOY_LBUMPER_1     = DashP1
+JOY_RBUMPER_1     = ParryP1
+JOY_X_1           = NeutralP1
+JOY_Y_1           = UpwardP1
+JOY_A_1           = DownwardP1
+JOY_B_1           = SuperP1
+JOY_UP_2          = UpP2
+JOY_LEFT_2        = LeftP2
+JOY_DOWN_2        = DownP2
+JOY_RIGHT_2       = RightP2
+JOY_LX_2          = LeftRightP2
+JOY_LY_2          = UpDownP2
+JOY_LBUMPER_2     = DashP2
+JOY_RBUMPER_2     = ParryP2
+JOY_X_2           = NeutralP2
+JOY_Y_2           = UpwardP2
+JOY_A_2           = DownwardP2
+JOY_B_2           = SuperP2
  
 [MainViewport]
 Camera            = MainCamera
