--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -5,7 +5,9 @@ HighSpeed         = true ; For high velocity objects, this property should be se
 ;O-Pilot Class Data
 WalkingSpeed         = 20000.0
 FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
 DashSpeed            = 200000.0
+JumpDuration         = 0.45
 DashDuration         = 0.1
 ParryDuration        = 0.05
 MaxDashes            = 3
@@ -30,7 +32,7 @@ Solid             = true
 [O-PilotP1@O-Pilot]
 Body              = B-PilotP1
 Position          = (-512, 0, 0)
-ChildList         = O-ShipP1
+ChildList         = O-ShipP1 # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1
 
 [G-PilotP1@G-Pilot]
 
@@ -45,7 +47,7 @@ CheckMask         = wall # partition # laserP2 # orbP2
 Body              = B-PilotP2
 Position          = (512, 0, 0)
 Flip              = x
-ChildList         = O-ShipP2
+ChildList         = O-ShipP2 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2
 
 [G-PilotP2@G-Pilot]
 
@@ -57,28 +59,61 @@ SelfFlags         = pilotP2
 CheckMask         = wall # partition # laserP1 # orbP1
 
 [O-DashMeter@O-UI]
-Graphic           = G-DashMeter
 Scale             = (0.072, 0.0375, 1.0)
-Position          = (-0.05, -0.475, 0.0)
 
 [G-DashMeter]
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+[O-DashMeterP1@O-DashMeter]
+Graphic           = G-DashMeterP1
+Position          = (-0.05, -0.475, 0.0)
+
+[G-DashMeterP1@G-DashMeter]
 Pivot             = right
 
+[O-DashMeterP2@O-DashMeter]
+Graphic           = G-DashMeterP2
+Position          = (0.05, -0.475, 0.0)
+
+[G-DashMeterP2@G-DashMeter]
+Pivot             = left
+
 [O-ParryMeter@O-UI]
-Graphic           = G-ParryMeter
 Scale             = (0.072, 0.0375, 1.0)
-Position          = (-0.1445, -0.475, 0.0)
 
 [G-ParryMeter]
 Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+[O-ParryMeterP1@O-ParryMeter]
+Graphic           = G-ParryMeterP1
+Position          = (-0.1445, -0.475, 0.0)
+
+[G-ParryMeterP1@G-ParryMeter]
 Pivot             = right
 
+[O-ParryMeterP2@O-ParryMeter]
+Graphic           = G-ParryMeterP2
+Position          = (0.1445, -0.475, 0.0)
+
+[G-ParryMeterP2@G-ParryMeter]
+Pivot             = left
+
 [O-LivesMeter@O-UI]
-Graphic           = G-LivesMeter
 Scale             = (0.072, 0.025, 1.0)
-Position          = (-0.05, -0.39375, 0.0)
 
 [G-LivesMeter]
 Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
+
+[O-LivesMeterP1@O-LivesMeter]
+Graphic           = G-LivesMeterP1
+Position          = (-0.05, -0.39375, 0.0)
+
+[G-LivesMeterP1@G-LivesMeter]
 Pivot             = right
+
+[O-LivesMeterP2@O-LivesMeter]
+Graphic           = G-LivesMeterP2
+Position          = (0.05, -0.39375, 0.0)
+
+[G-LivesMeterP2@G-LivesMeter]
+Pivot             = left
