Got wall running and jumping working. Tomorrow, I will work on figuring out why melee attacks are not colliding, and on implementing parrying, contamination and ship construction

--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -1,6 +1,7 @@
 [O-Pilot]
 Graphic           = G-Pilot
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
+AnimationSet      = AS-Pilot
 
 ;O-Pilot Class Data
 WalkingSpeed         = 20000.0
@@ -10,6 +11,7 @@ DashSpeed            = 200000.0
 JumpDuration         = 0.45
 DashDuration         = 0.1
 ParryDuration        = 0.05
+MeleeDuration        = 0.3
 MaxDashes            = 3
 MaxLives             = 3
 MaxCooldownDash      = 2.0
@@ -17,7 +19,9 @@ MaxCooldownParry     = 1.0
 MaxCooldownMelee     = 1.0
 
 [G-Pilot]
-Texture           = Soldier.png
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
 Pivot             = center
 
 [B-Pilot]
@@ -29,10 +33,26 @@ CustomGravity     = (0.0, 0.0, 0.0)
 Type              = box
 Solid             = true
 
+[AS-Pilot]
+Texture           = soldier_full.png
+FrameSize         = (32, 32, 0)
+Pivot             = center
+StartAnim         = A-PilotIdle
+A-PilotIdle       = 1 ; We're using the first sprite from the sheet for the idle "animation".
+A-PilotRun        = 6 ; Or -1 would be fine too, since that specifies to use all the sprites in the sheet.
+A-PilotIdle->     = A-PilotIdle # .A-PilotRun ; This syntax means that when the A-PilotIdle animation finishes, it may branch off to A-PilotIdle again, or A-PilotRun instantly.
+A-PilotRun->      = A-PilotRun # .A-PilotIdle ; This syntax means that when the A-PilotRun animation finishes, it may branch off to A-PilotRun again, or A-PilotIdle instantly.
+
+[A-PilotIdle]
+KeyDuration       = 1.0
+
+[A-PilotRun]
+KeyDuration       = 0.1
+
 [O-PilotP1@O-Pilot]
 Body              = B-PilotP1
-Position          = (-512, 0, 0)
-ChildList         = O-ShipP1 # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1
+Position          = (-512, 350, 0)
+ChildList         = O-ShipP1 # O-MeleeWeaponP1
 
 [G-PilotP1@G-Pilot]
 
@@ -41,13 +61,13 @@ PartList          = BP-PilotP1 # BP-Ship
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags         = pilotP1
-CheckMask         = wall # partition # laserP2 # orbP2
+CheckMask         = wall # partition # laserP2 # orbP2 # meleeWeaponP2
 
 [O-PilotP2@O-Pilot]
 Body              = B-PilotP2
-Position          = (512, 0, 0)
+Position          = (512, 350, 0)
 Flip              = x
-ChildList         = O-ShipP2 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2
+ChildList         = O-ShipP2 # O-MeleeWeaponP2
 
 [G-PilotP2@G-Pilot]
 
@@ -56,64 +76,44 @@ PartList          = BP-PilotP2 # BP-Ship
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags         = pilotP2
-CheckMask         = wall # partition # laserP1 # orbP1
+CheckMask         = wall # partition # laserP1 # orbP1 # meleeWeaponP1
 
-[O-DashMeter@O-UI]
-Scale             = (0.072, 0.0375, 1.0)
+[O-MeleeWeapon@ScrollObject]
+Position          = (1, 0, 0)
+Scale             = (0.5, 0.5, 1)
+UseParentSpace    = position
 
-[G-DashMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+[G-MeleeWeapon]
+Texture           = SpaceShooterRedux/PNG/Damage/playerShip1_damage3.png
+Pivot             = center
 
-[O-DashMeterP1@O-DashMeter]
-Graphic           = G-DashMeterP1
-Position          = (-0.05, -0.475, 0.0)
+[B-MeleeWeapon]
+Dynamic           = true
 
-[G-DashMeterP1@G-DashMeter]
-Pivot             = right
+[BP-MeleeWeapon]
+Type              = box
+Solid             = false
 
-[O-DashMeterP2@O-DashMeter]
-Graphic           = G-DashMeterP2
-Position          = (0.05, -0.475, 0.0)
+[O-MeleeWeaponP1@O-MeleeWeapon]
+Graphic           = G-MeleeWeaponP1
 
-[G-DashMeterP2@G-DashMeter]
-Pivot             = left
+[G-MeleeWeaponP1@G-MeleeWeapon]
 
-[O-ParryMeter@O-UI]
-Scale             = (0.072, 0.0375, 1.0)
+[B-MeleeWeaponP1@B-MeleeWeapon]
+PartList          = BP-MeleeWeaponP1
 
-[G-ParryMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
+[BP-MeleeWeaponP1@BP-MeleeWeapon]
+SelfFlags         = meleeWeaponP1
+CheckMask         = pilotP2
 
-[O-ParryMeterP1@O-ParryMeter]
-Graphic           = G-ParryMeterP1
-Position          = (-0.1445, -0.475, 0.0)
+[O-MeleeWeaponP2@O-MeleeWeapon]
+Graphic           = G-MeleeWeaponP2
 
-[G-ParryMeterP1@G-ParryMeter]
-Pivot             = right
+[G-MeleeWeaponP2@G-MeleeWeapon]
 
-[O-ParryMeterP2@O-ParryMeter]
-Graphic           = G-ParryMeterP2
-Position          = (0.1445, -0.475, 0.0)
+[B-MeleeWeaponP2@B-MeleeWeapon]
+PartList          = BP-MeleeWeaponP2
 
-[G-ParryMeterP2@G-ParryMeter]
-Pivot             = left
-
-[O-LivesMeter@O-UI]
-Scale             = (0.072, 0.025, 1.0)
-
-[G-LivesMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
-
-[O-LivesMeterP1@O-LivesMeter]
-Graphic           = G-LivesMeterP1
-Position          = (-0.05, -0.39375, 0.0)
-
-[G-LivesMeterP1@G-LivesMeter]
-Pivot             = right
-
-[O-LivesMeterP2@O-LivesMeter]
-Graphic           = G-LivesMeterP2
-Position          = (0.05, -0.39375, 0.0)
-
-[G-LivesMeterP2@G-LivesMeter]
-Pivot             = left
+[BP-MeleeWeaponP2@BP-MeleeWeapon]
+SelfFlags         = meleeWeaponP2
+CheckMask         = pilotP1
