--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -30,18 +30,18 @@ Pivot             = center
 
 [BP-Ship]
 Type              = box
-Solid             = true
+Solid             = false
 TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
 BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
 SelfFlags         = ship
 CheckMask         = wall
 
 [O-ShipP1@O-Ship]
-ChildList         = O-NeutralGunP1 # O-UpwardGunP1 # O-DownwardGunP1 # O-SuperGunP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1
+ChildList         = O-NeutralGunP1 # O-UpwardGunP1 # O-DownwardGunP1 # O-SuperGunP1
 
 [O-ShipP2@O-Ship]
 Flip              = y
-ChildList         = O-NeutralGunP2 # O-UpwardGunP2 # O-DownwardGunP2 # O-SuperGunP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2
+ChildList         = O-NeutralGunP2 # O-UpwardGunP2 # O-DownwardGunP2 # O-SuperGunP2
 
 [O-NeutralGun@O-Spawner]
 Position          = (0.0, -0.5, 0.0)
@@ -90,83 +90,3 @@ Object            = O-OrbP1
 
 [SP-OrbP2]
 Object            = O-OrbP2
-
-[O-NeutralMeter@O-UI]
-Scale             = (0.072, 0.0375, 1.0)
-
-[G-NeutralMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
-
-[O-NeutralMeterP1@O-NeutralMeter]
-Graphic           = G-NeutralMeterP1
-Position          = (-0.239, -0.475, 0.0)
-
-[G-NeutralMeterP1@G-NeutralMeter]
-Pivot             = right
-
-[O-NeutralMeterP2@O-NeutralMeter]
-Graphic           = G-NeutralMeterP2
-Position          = (0.239, -0.475, 0.0)
-
-[G-NeutralMeterP2@G-NeutralMeter]
-Pivot             = left
-
-[O-UpwardMeter@O-UI]
-Scale             = (0.072, 0.0375, 1.0)
-
-[G-UpwardMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
-
-[O-UpwardMeterP1@O-UpwardMeter]
-Graphic           = G-UpwardMeterP1
-Position          = (-0.3335, -0.475, 0.0)
-
-[G-UpwardMeterP1@G-UpwardMeter]
-Pivot             = right
-
-[O-UpwardMeterP2@O-UpwardMeter]
-Graphic           = G-UpwardMeterP2
-Position          = (0.3335, -0.475, 0.0)
-
-[G-UpwardMeterP2@G-UpwardMeter]
-Pivot             = left
-
-[O-DownwardMeter@O-UI]
-Scale             = (0.072, 0.0375, 1.0)
-
-[G-DownwardMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
-
-[O-DownwardMeterP1@O-DownwardMeter]
-Graphic           = G-DownwardMeterP1
-Position          = (-0.428, -0.475, 0.0)
-
-[G-DownwardMeterP1@G-DownwardMeter]
-Pivot             = right
-
-[O-DownwardMeterP2@O-DownwardMeter]
-Graphic           = G-DownwardMeterP2
-Position          = (0.428, -0.475, 0.0)
-
-[G-DownwardMeterP2@G-DownwardMeter]
-Pivot             = left
-
-[O-SuperMeter@O-UI]
-Scale             = (0.45, 0.0375, 1.0)
-
-[G-SuperMeter]
-Texture           = SpaceShooterRedux/PNG/UI/buttonYellow.png
-
-[O-SuperMeterP1@O-SuperMeter]
-Graphic           = G-SuperMeterP1
-Position          = (-0.05, -0.43125, 0.0)
-
-[G-SuperMeterP1@G-SuperMeter]
-Pivot             = right
-
-[O-SuperMeterP2@O-SuperMeter]
-Graphic           = G-SuperMeterP2
-Position          = (0.05, -0.43125, 0.0)
-
-[G-SuperMeterP2@G-SuperMeter]
-Pivot             = left
