Continuing work on prototype. Now that I have implemented some minor code to allow for parameter passage on orx object creation, and section selection regarding the config, I ought to simplify my config next by removing superfluous P2 sections

--- a/data/config/Arena.ini
+++ b/data/config/Arena.ini
@@ -1,5 +1,5 @@
 [O-Arena]
-ChildList     = O-PilotP1 # O-PilotP2 # O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2
+ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2
 
 [O-DashMeter@O-UI]
 Scale             = (0.072, 0.0375, 1.0)
