--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -10,13 +10,14 @@ JumpingSpeed         = 65000.0
 DashSpeed            = 200000.0
 JumpDuration         = 0.45
 DashDuration         = 0.1
-ParryDuration        = 0.05
-MeleeDuration        = 0.3
+ParryDuration        = 0.1
+MeleeDuration        = 0.5
 MaxDashes            = 3
 MaxLives             = 3
 MaxCooldownDash      = 2.0
 MaxCooldownParry     = 1.0
 MaxCooldownMelee     = 1.0
+IsP2                 = false
 
 [G-Pilot]
 Texture           = soldier_full.png
@@ -52,7 +53,7 @@ KeyDuration       = 0.1
 [O-PilotP1@O-Pilot]
 Body              = B-PilotP1
 Position          = (-512, 350, 0)
-ChildList         = O-ShipP1 # O-MeleeWeaponP1
+ChildList         = O-ShipP1
 
 [G-PilotP1@G-Pilot]
 
@@ -61,13 +62,13 @@ PartList          = BP-PilotP1 # BP-Ship
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags         = pilotP1
-CheckMask         = wall # partition # laserP2 # orbP2 # meleeWeaponP2
+CheckMask         = wall # partition # pilotP2 # laserP2 # orbP2
 
 [O-PilotP2@O-Pilot]
 Body              = B-PilotP2
 Position          = (512, 350, 0)
 Flip              = x
-ChildList         = O-ShipP2 # O-MeleeWeaponP2
+ChildList         = O-ShipP2
 
 [G-PilotP2@G-Pilot]
 
@@ -76,44 +77,32 @@ PartList          = BP-PilotP2 # BP-Ship
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags         = pilotP2
-CheckMask         = wall # partition # laserP1 # orbP1 # meleeWeaponP1
+CheckMask         = wall # partition # pilotP1 # laserP1 # orbP1
 
-[O-MeleeWeapon@ScrollObject]
-Position          = (1, 0, 0)
-Scale             = (0.5, 0.5, 1)
-UseParentSpace    = position
+[FX-Melee]
+SlotList          = FXS-Melee
+KeepInCache       = true
+Loop              = true
 
-[G-MeleeWeapon]
-Texture           = SpaceShooterRedux/PNG/Damage/playerShip1_damage3.png
-Pivot             = center
+[FXS-Melee]
+Type              = color
+Curve             = sine
+StartTime         = 0
+EndTime           = @O-Pilot.MeleeDuration
+Absolute          = true
+StartValue        = (255, 255, 0)
+EndValue          = (255, 0, 0)
 
-[B-MeleeWeapon]
-Dynamic           = true
+[FX-Parry]
+SlotList          = FXS-Parry
+KeepInCache       = true
+Loop              = true
 
-[BP-MeleeWeapon]
-Type              = box
-Solid             = false
-
-[O-MeleeWeaponP1@O-MeleeWeapon]
-Graphic           = G-MeleeWeaponP1
-
-[G-MeleeWeaponP1@G-MeleeWeapon]
-
-[B-MeleeWeaponP1@B-MeleeWeapon]
-PartList          = BP-MeleeWeaponP1
-
-[BP-MeleeWeaponP1@BP-MeleeWeapon]
-SelfFlags         = meleeWeaponP1
-CheckMask         = pilotP2
-
-[O-MeleeWeaponP2@O-MeleeWeapon]
-Graphic           = G-MeleeWeaponP2
-
-[G-MeleeWeaponP2@G-MeleeWeapon]
-
-[B-MeleeWeaponP2@B-MeleeWeapon]
-PartList          = BP-MeleeWeaponP2
-
-[BP-MeleeWeaponP2@BP-MeleeWeapon]
-SelfFlags         = meleeWeaponP2
-CheckMask         = pilotP1
+[FXS-Parry]
+Type              = color
+Curve             = sine
+StartTime         = 0
+EndTime           = @O-Pilot.ParryDuration
+Absolute          = true
+StartValue        = (255, 255, 0)
+EndValue          = (0, 0, 255)
