Reformatted config such that it is in a more reuseable and maintainable state, and started implementing zones. Tomorrow, I will implement the text objects to go along with construction and contamination.

--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -17,7 +17,7 @@ Dynamic           = false
 Type              = box
 Solid             = true
 SelfFlags         = wall
-CheckMask         = pilotP1 # pilotP2 # ship # laserP1 # laserP2 # orbP1 # orbP2
+CheckMask         = pilotP1 # pilotP2 # ship1 # laserP1 # laserP2 # orbP1 # orbP2
 
 [O-WallFloor@O-Wall]
 Position          = (0, 532.5, 0)
