--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -6,6 +6,7 @@
 @../data/config/Pilot.ini@
 @../data/config/Projectile.ini@
 @../data/config/Ship.ini@
+@../data/config/UI.ini@
 
 ; Main Settings
 
@@ -86,8 +87,3 @@ Position          = (0.0, 0.0, -1.0)
 
 [O-Spawner]
 UseParentSpace    = position
-
-; UI Base
-
-[O-UI@ScrollObject]
-ParentCamera      = MainCamera ; Set MainCamera to be the parent of the UI element, thus binding them, and handling the latter in terms of camera space.
