--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -1,29 +1,6 @@
 [O-Pilot]
-Graphic           = G-Pilot
 HighSpeed         = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
 AnimationSet      = AS-Pilot
-
-;O-Pilot Class Data
-WalkingSpeed         = 20000.0
-FlyingSpeed          = 30000.0
-JumpingSpeed         = 65000.0
-DashSpeed            = 200000.0
-JumpDuration         = 0.45
-DashDuration         = 0.1
-ParryDuration        = 0.1
-MeleeDuration        = 0.5
-MaxDashes            = 3
-MaxLives             = 3
-MaxCooldownDash      = 2.0
-MaxCooldownParry     = 1.0
-MaxCooldownMelee     = 1.0
-IsP2                 = false
-
-[G-Pilot]
-Texture           = soldier_full.png
-TextureOrigin     = (0, 0, 0)
-TextureSize       = (32, 32, 0)
-Pivot             = center
 
 [B-Pilot]
 Dynamic           = true
@@ -50,34 +27,146 @@ KeyDuration       = 1.0
 [A-PilotRun]
 KeyDuration       = 0.1
 
-[O-PilotP1@O-Pilot]
+[O-PilotP1]
 Body              = B-PilotP1
 Position          = (-512, 350, 0)
-ChildList         = O-ShipP1
 
-[G-PilotP1@G-Pilot]
-
-[B-PilotP1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship
+;Class Data
+UpInput           = UpP1
+LeftInput         = LeftP1
+DownInput         = DownP1
+RightInput        = RightP1
+LeftRightInput    = LeftRightP1
+UpDownInput       = UpDownP1
+DashInput         = DashP1
+ParryInput        = ParryP1
+MeleeInput        = NeutralP1
+JumpInput         = DownwardP1
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags         = pilotP1
-CheckMask         = wall # partition # pilotP2 # laserP2 # orbP2
+CheckMask         = wall # zone # partition # pilotP2 # laserP2 # orbP2
 
-[O-PilotP2@O-Pilot]
+[O-PilotP2]
 Body              = B-PilotP2
 Position          = (512, 350, 0)
 Flip              = x
-ChildList         = O-ShipP2
 
-[G-PilotP2@G-Pilot]
-
-[B-PilotP2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship
+;Class Data
+UpInput           = UpP2
+LeftInput         = LeftP2
+DownInput         = DownP2
+RightInput        = RightP2
+LeftRightInput    = LeftRightP2
+UpDownInput       = UpDownP2
+DashInput         = DashP2
+ParryInput        = ParryP2
+MeleeInput        = NeutralP2
+JumpInput         = DownwardP2
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags         = pilotP2
-CheckMask         = wall # partition # pilotP1 # laserP1 # orbP1
+CheckMask         = wall # zone # partition # pilotP1 # laserP1 # orbP1
+
+;Specific Pilots
+
+[O-Pilot1@O-Pilot]
+Graphic              = G-Pilot1
+
+;Class Data
+WalkingSpeed         = 20000.0
+FlyingSpeed          = 30000.0
+JumpingSpeed         = 65000.0
+DashSpeed            = 200000.0
+JumpDuration         = 0.45
+DashDuration         = 0.1
+ParryDuration        = 0.1
+MeleeDuration        = 0.5
+MaxDashes            = 3
+MaxLives             = 3
+MaxCooldownDash      = 2.0
+MaxCooldownParry     = 1.0
+MaxCooldownMelee     = 1.0
+
+[G-Pilot1]
+Texture           = soldier_full.png
+TextureOrigin     = (0, 0, 0)
+TextureSize       = (32, 32, 0)
+Pivot             = center
+
+[O-Pilot1P1@O-Pilot1]
+Body                 = B-Pilot1P1
+Position             = @O-PilotP1
+ChildList            = O-Ship1P1
+
+;Class Data
+UpInput           = @O-PilotP1
+LeftInput         = @O-PilotP1
+DownInput         = @O-PilotP1
+RightInput        = @O-PilotP1
+LeftRightInput    = @O-PilotP1
+UpDownInput       = @O-PilotP1
+DashInput         = @O-PilotP1
+ParryInput        = @O-PilotP1
+MeleeInput        = @O-PilotP1
+JumpInput         = @O-PilotP1
+
+[B-Pilot1P1@B-Pilot]
+PartList          = BP-PilotP1 # BP-Ship1
+
+[O-Pilot1P2@O-Pilot1]
+Body                 = B-Pilot1P2
+Position             = @O-PilotP2
+Flip                 = @O-PilotP2
+ChildList            = O-Ship1P2
+
+;Class Data
+UpInput           = @O-PilotP2
+LeftInput         = @O-PilotP2
+DownInput         = @O-PilotP2
+RightInput        = @O-PilotP2
+LeftRightInput    = @O-PilotP2
+UpDownInput       = @O-PilotP2
+DashInput         = @O-PilotP2
+ParryInput        = @O-PilotP2
+MeleeInput        = @O-PilotP2
+JumpInput         = @O-PilotP2
+
+[B-Pilot1P2@B-Pilot]
+PartList          = BP-PilotP2 # BP-Ship1
+
+; Zone
+
+[O-Zone]
+Body              = B-Zone
+
+[B-Zone]
+PartList          = BP-Zone
+Dynamic           = false
+
+[BP-Zone]
+Type              = box
+Solid             = false
+TopLeft           = (0, 0, 0)
+BottomRight       = (960, 945, 0)
+SelfFlags         = zone
+CheckMask         = pilotP1 # pilotP2
+
+[O-ZoneP1@O-Zone]
+Position          = (-960, -405, 0)
+
+[O-ZoneP2@O-Zone]
+Position          = (0, -405, 0)
+
+;Text
+
+[T-Construction]
+String            = 10
+
+[T-Contamination]
+String            = 10
+
+;FX
 
 [FX-Melee]
 SlotList          = FXS-Melee
@@ -88,7 +177,7 @@ Loop              = true
 Type              = color
 Curve             = sine
 StartTime         = 0
-EndTime           = @O-Pilot.MeleeDuration
+EndTime           = @O-Pilot1.MeleeDuration
 Absolute          = true
 StartValue        = (255, 255, 0)
 EndValue          = (255, 0, 0)
@@ -102,7 +191,7 @@ Loop              = true
 Type              = color
 Curve             = sine
 StartTime         = 0
-EndTime           = @O-Pilot.ParryDuration
+EndTime           = @O-Pilot1.ParryDuration
 Absolute          = true
 StartValue        = (255, 255, 0)
 EndValue          = (0, 0, 255)
