--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -28,20 +28,53 @@ MaxWaveDelaySuper    = 0.2
 Texture           = SpaceShooterRedux/PNG/playerShip1_green.png
 Pivot             = center
 
-[BP-Ship]
-Type              = box
-Solid             = false
-TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
-BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
-SelfFlags         = ship
-CheckMask         = wall
-
-[O-ShipP1@O-Ship]
+[O-ShipP1]
 ChildList         = O-NeutralGunP1 # O-UpwardGunP1 # O-DownwardGunP1 # O-SuperGunP1
 
-[O-ShipP2@O-Ship]
+[O-ShipP2]
 Flip              = y
 ChildList         = O-NeutralGunP2 # O-UpwardGunP2 # O-DownwardGunP2 # O-SuperGunP2
+
+;Specific Ships
+
+[O-Ship1@O-Ship]
+;Class Data
+ClipSizeNeutral   = 10
+ClipSizeUpward    = 1
+ClipSizeDownward  = 1
+WaveSizeNeutral   = 1
+WaveSizeUpward    = 1
+WaveSizeDownward  = 6
+WaveSizeSuper     = 8
+NumWavesNeutral   = 1
+NumWavesUpward    = 1
+NumWavesDownward  = 1
+NumWavesSuper     = 6
+MaxCooldownNeutral   = 0.5
+MaxCooldownUpward    = 0.5
+MaxCooldownDownward  = 0.5
+MaxCooldownSuper     = 120.0
+MaxWaveDelayNeutral  = 0.0
+MaxWaveDelayUpward   = 0.0
+MaxWaveDelayDownward = 0.0
+MaxWaveDelaySuper    = 0.2
+
+[BP-Ship1]
+Type              = box
+Solid             = true
+TopLeft           = (-37.5, -49.5, 0) ; The upper left corner (when properly accounting for rotation) of G-Ship
+BottomRight       = (37.5, 49.5, 0) ; The bottom right corner (when properly accounting for rotation) of G-Ship
+SelfFlags         = ship1
+CheckMask         = wall
+
+[O-Ship1P1@O-Ship1]
+ChildList            = @O-ShipP1
+
+[O-Ship1P2@O-Ship1]
+Flip                 = @O-ShipP2
+ChildList            = @O-ShipP2
+
+; Guns
 
 [O-NeutralGun@O-Spawner]
 Position          = (0.0, -0.5, 0.0)
