Implemented construction and contamination, including countdowns, and got parrying working. Next order of business is to pretty up UI with some clip size markers, and clean up the code base.

--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -80,7 +80,7 @@ JumpingSpeed         = 65000.0
 DashSpeed            = 200000.0
 JumpDuration         = 0.45
 DashDuration         = 0.1
-ParryDuration        = 0.1
+ParryDuration        = 0.8
 MeleeDuration        = 0.5
 MaxDashes            = 3
 MaxLives             = 3
@@ -97,7 +97,7 @@ Pivot             = center
 [O-Pilot1P1@O-Pilot1]
 Body                 = B-Pilot1P1
 Position             = @O-PilotP1
-ChildList            = O-Ship1P1
+ChildList            = O-Ship1P1 # O-HeadsUpText
 
 ;Class Data
 UpInput           = @O-PilotP1
@@ -118,7 +118,7 @@ PartList          = BP-PilotP1 # BP-Ship1
 Body                 = B-Pilot1P2
 Position             = @O-PilotP2
 Flip                 = @O-PilotP2
-ChildList            = O-Ship1P2
+ChildList            = O-Ship1P2 # O-HeadsUpText
 
 ;Class Data
 UpInput           = @O-PilotP2
@@ -160,10 +160,17 @@ Position          = (0, -405, 0)
 
 ;Text
 
-[T-Construction]
-String            = 10
+[O-HeadsUpText@ScrollObject]
+Graphic           = G-HeadsUpText
+Position          = (0, -1, 0)
+Scale             = (1.25, 1.25, 1.25)
+UseParentSpace    = both
 
-[T-Contamination]
+[G-HeadsUpText]
+Text              = T-HeadsUpText
+Pivot             = center
+
+[T-HeadsUpText]
 String            = 10
 
 ;FX
