--- a/data/config/Arena.ini
+++ b/data/config/Arena.ini
@@ -1,5 +1,5 @@
 [O-Arena]
-ChildList     = O-Walls # O-Zones # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2
+ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2
 
 ; UI Elements
 
@@ -11,14 +11,14 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-DashMeterP1@O-DashMeter]
 Graphic           = G-DashMeterP1
-Position          = (-0.05, -0.475, 0.0)
+Position          = (-0.05, -0.475, 1.0)
 
 [G-DashMeterP1@G-DashMeter]
 Pivot             = right
 
 [O-DashMeterP2@O-DashMeter]
 Graphic           = G-DashMeterP2
-Position          = (0.05, -0.475, 0.0)
+Position          = (0.05, -0.475, 1.0)
 
 [G-DashMeterP2@G-DashMeter]
 Pivot             = left
@@ -31,14 +31,14 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-ParryMeterP1@O-ParryMeter]
 Graphic           = G-ParryMeterP1
-Position          = (-0.1445, -0.475, 0.0)
+Position          = (-0.1445, -0.475, 1.0)
 
 [G-ParryMeterP1@G-ParryMeter]
 Pivot             = right
 
 [O-ParryMeterP2@O-ParryMeter]
 Graphic           = G-ParryMeterP2
-Position          = (0.1445, -0.475, 0.0)
+Position          = (0.1445, -0.475, 1.0)
 
 [G-ParryMeterP2@G-ParryMeter]
 Pivot             = left
@@ -51,14 +51,14 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
 
 [O-LivesMeterP1@O-LivesMeter]
 Graphic           = G-LivesMeterP1
-Position          = (-0.05, -0.39375, 0.0)
+Position          = (-0.05, -0.39375, 1.0)
 
 [G-LivesMeterP1@G-LivesMeter]
 Pivot             = right
 
 [O-LivesMeterP2@O-LivesMeter]
 Graphic           = G-LivesMeterP2
-Position          = (0.05, -0.39375, 0.0)
+Position          = (0.05, -0.39375, 1.0)
 
 [G-LivesMeterP2@G-LivesMeter]
 Pivot             = left
@@ -71,14 +71,14 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-NeutralMeterP1@O-NeutralMeter]
 Graphic           = G-NeutralMeterP1
-Position          = (-0.239, -0.475, 0.0)
+Position          = (-0.239, -0.475, 1.0)
 
 [G-NeutralMeterP1@G-NeutralMeter]
 Pivot             = right
 
 [O-NeutralMeterP2@O-NeutralMeter]
 Graphic           = G-NeutralMeterP2
-Position          = (0.239, -0.475, 0.0)
+Position          = (0.239, -0.475, 1.0)
 
 [G-NeutralMeterP2@G-NeutralMeter]
 Pivot             = left
@@ -91,14 +91,14 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-UpwardMeterP1@O-UpwardMeter]
 Graphic           = G-UpwardMeterP1
-Position          = (-0.3335, -0.475, 0.0)
+Position          = (-0.3335, -0.475, 1.0)
 
 [G-UpwardMeterP1@G-UpwardMeter]
 Pivot             = right
 
 [O-UpwardMeterP2@O-UpwardMeter]
 Graphic           = G-UpwardMeterP2
-Position          = (0.3335, -0.475, 0.0)
+Position          = (0.3335, -0.475, 1.0)
 
 [G-UpwardMeterP2@G-UpwardMeter]
 Pivot             = left
@@ -111,14 +111,14 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonBlue.png
 
 [O-DownwardMeterP1@O-DownwardMeter]
 Graphic           = G-DownwardMeterP1
-Position          = (-0.428, -0.475, 0.0)
+Position          = (-0.428, -0.475, 1.0)
 
 [G-DownwardMeterP1@G-DownwardMeter]
 Pivot             = right
 
 [O-DownwardMeterP2@O-DownwardMeter]
 Graphic           = G-DownwardMeterP2
-Position          = (0.428, -0.475, 0.0)
+Position          = (0.428, -0.475, 1.0)
 
 [G-DownwardMeterP2@G-DownwardMeter]
 Pivot             = left
@@ -131,14 +131,37 @@ Texture           = SpaceShooterRedux/PNG/UI/buttonYellow.png
 
 [O-SuperMeterP1@O-SuperMeter]
 Graphic           = G-SuperMeterP1
-Position          = (-0.05, -0.43125, 0.0)
+Position          = (-0.05, -0.43125, 1.0)
 
 [G-SuperMeterP1@G-SuperMeter]
 Pivot             = right
 
 [O-SuperMeterP2@O-SuperMeter]
 Graphic           = G-SuperMeterP2
-Position          = (0.05, -0.43125, 0.0)
+Position          = (0.05, -0.43125, 1.0)
 
 [G-SuperMeterP2@G-SuperMeter]
 Pivot             = left
+
+[O-ClipBorder@O-UI]
+Graphic           = G-ClipBorder
+Scale             = (0.002, 0.0375, 1.0)
+
+[G-ClipBorder]
+Texture           = SpaceShooterRedux/PNG/UI/buttonRed.png
+Pivot             = center
+Color             = (255, 0, 0)
+
+[O-ClipBorderTop@O-ClipBorder]
+Scale             = (0.072, 0.002, 1.0)
+Pivot             = top
+
+[O-ClipBorderLeft@O-ClipBorder]
+Pivot             = left
+
+[O-ClipBorderBottom@O-ClipBorder]
+Scale             = @O-ClipBorderTop.Scale
+Pivot             = bottom
+
+[O-ClipBorderRight@O-ClipBorder]
+Pivot             = right
