Implemented melee attacks as body parts attached to a pilot instead of relying on pilot to pilot collisions, and got arena behavior more in line with what is expected, resulting in character life losses and arena resets.

--- a/data/config/Arena.ini
+++ b/data/config/Arena.ini
@@ -1,7 +1,7 @@
 [O-Arena]
-ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2
+ChildList     = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2 # O-TimerText
 
-; UI Elements
+; Meters
 
 [O-DashMeter@O-UI]
 Scale             = (0.072, 0.0375, 1.0)
@@ -165,3 +165,17 @@ Pivot             = bottom
 
 [O-ClipBorderRight@O-ClipBorder]
 Pivot             = right
+
+; Text
+
+[O-TimerText@O-UI]
+Graphic           = G-TimerText
+Position          = (0, -0.4375, 0)
+Scale             = (0.08, 0.08, 0.08)
+
+[G-TimerText]
+Text              = T-TimerText
+Pivot             = center
+
+[T-TimerText]
+String            = 90
