--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -87,3 +87,8 @@ Position          = (0.0, 0.0, -1.0)
 
 [O-Spawner]
 UseParentSpace    = position
+
+; Spawner Base
+
+[SP-Spawner]
+CleanOnDelete     = true ; Enforces the destruction of spawned objects upon that of their spawner.
