--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -45,7 +45,7 @@ JumpInput         = DownwardP1
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags         = pilotP1
-CheckMask         = wall # zone # partition # pilotP2 # laserP2 # orbP2
+CheckMask         = wall # zone # partition # melee1P2 laserP2 # orbP2
 
 [O-PilotP2]
 Body              = B-PilotP2
@@ -66,7 +66,7 @@ JumpInput         = DownwardP2
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags         = pilotP2
-CheckMask         = wall # zone # partition # pilotP1 # laserP1 # orbP1
+CheckMask         = wall # zone # partition # melee1P1 # laserP1 # orbP1
 
 ;Specific Pilots
 
@@ -112,7 +112,13 @@ MeleeInput        = @O-PilotP1
 JumpInput         = @O-PilotP1
 
 [B-Pilot1P1@B-Pilot]
-PartList          = BP-PilotP1 # BP-Ship1
+PartList          = BP-PilotP1 # BP-Ship1 # BP-Melee1P1
+
+[BP-Melee1P1@BP-Melee]
+TopLeft           = (0, -16, 0)
+BottomRight       = (16, 16, 0)
+SelfFlags         = melee1P1
+CheckMask         = pilotP2
 
 [O-Pilot1P2@O-Pilot1]
 Body                 = B-Pilot1P2
@@ -133,7 +139,19 @@ MeleeInput        = @O-PilotP2
 JumpInput         = @O-PilotP2
 
 [B-Pilot1P2@B-Pilot]
-PartList          = BP-PilotP2 # BP-Ship1
+PartList          = BP-PilotP2 # BP-Ship1 # BP-Melee1P2
+
+[BP-Melee1P2@BP-Melee]
+TopLeft           = (-16, -16, 0)
+BottomRight       = (0, 16, 0)
+SelfFlags         = melee1P2
+CheckMask         = pilotP1
+
+;Melee
+
+[BP-Melee]
+Type              = box
+Solid             = false
 
 ;Zone
 
