--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -112,14 +112,14 @@ Spawner           = SP-LaserP2
 [O-SuperGunP2@O-SuperGun]
 Spawner           = SP-LaserP2
 
-[SP-LaserP1]
+[SP-LaserP1@SP-Spawner]
 Object            = O-LaserP1
 
-[SP-LaserP2]
+[SP-LaserP2@SP-Spawner]
 Object            = O-LaserP2
 
-[SP-OrbP1]
+[SP-OrbP1@SP-Spawner]
 Object            = O-OrbP1
 
-[SP-OrbP2]
+[SP-OrbP2@SP-Spawner]
 Object            = O-OrbP2
